@@ -43,6 +43,9 @@ Version 4.99 (CVS HEAD)
  - mapobject.c: Fixed msMapSetExtent() to avoid trying to calcuate the 
    scale if the map size hasn't been set yet (bug 1968) 
 
+ - mapobject.c: ensure msMapComputeGeotransform() returns MS_FAILURE, not 
+   MS_FALSE (bug 1968)
+
 Version 4.10.0 (2006-10-04)
 ---------------------------
 
